--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
   </div>
 
-  <script src="scripts/artist.js"></script>
+  <script src="entities/track.js"></script>
+  <script src="entities/artist.js"></script>
   <script src="scripts/fetch.js"></script>
   <script src="scripts/load.js"></script>
-  <script src="scripts/oAuth.js"></script>
 </body>
 </html>
