refactor some html out of index.html

--- a/index.html
+++ b/index.html
@@ -13,36 +13,11 @@
   </section>
 
   <div class="content-container">
-
-    <section class="artist-block">
-
-      <h1 id="artist-title"></h1>
-
-      <img id="artist-img"/>
-
-      <div class="artist-followers-container">
-        <span>Followers:</span>
-        <span id="artist-followers"></span>
-      </div>
-        <a id="artist-open-link">
-          <button id="artist-open-button">OPEN</button>
-        </a>
-      </section>
-
+    <section id="artist-block"></section>
       <section class="artist-content">
-
-        <div class="artist-content-subsection">
-          <h2>Related Artists</h2>
-          <div id="related-artists-group-container">
-          </div>
-        </div>
-
-        <div class="artist-content-subsection">
-          <h2>Top Tracks</h2>
-          <div id="artist-top-tracks-container"></div>
-        </div>
+        <div class="artist-content-subsection" id="related-artist-section"></div>
+        <div class="artist-content-subsection" id="top-tracks-section"></div>
       </section>
-
   </div>
 
   <script src="entities/track.js"></script>
